Fix Sonar Warnings